--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
         <span class="name">Aditya Raj Gupta</span>
         <span class="job"> Web Developer & Freelancer</span>
       </div>
+<!--       social media icon with link if you copy the code then change the social media links -->
+
+      
       <div class="media-buttons">
         <a href="#" class="link" style="background: #4267b2">
           <i class="bx bxl-facebook-circle"></i>
